:sparkles: Introduce declarative color map types and compilers for OpenCV LUT generation